apps/core/static/scss/_blocks.scss
//
// Basic block styles
// --------------------------------------------------

.block {
    margin-bottom: $spacer-v / 2;

    @include media-breakpoint-up(sm) {
        margin-bottom: $spacer-v;
    }
}

.block--paragraph {
    p:last-child {
        margin-bottom: 0;
    }
}

.block--image {
    @include media-breakpoint-up(sm) {
        max-width: 80vw;

        &:nth-child(odd) {
            margin-left: auto;
        }
    }
}

.block--aligned_image--right {
    @include clearfix;

    .image-with-caption {
        float: right;
    }
}

.block--aligned_image--left {
    @include clearfix;

    .image-with-caption {
        float: left;
        text-align: right;
    }
}

.block--image img,
.block--aligned_image--left img,
.block--aligned_image--right img {
    max-height: 80vh;
}

.block--teaser_list {
    h2 {
        text-align: center;
    }

    a {
        border-bottom: none;
    }

    .row {
        margin-bottom: $spacer-v/2;
    }

    .row:last-child {
        margin-bottom: 0;
    }

    .fade-teaser:before {
        height: 12rem;
    }
}

.block--projects h2 {
    text-align: center;
}

.collapse-mt + .collapse-mt {
    .block {
        margin-top: 0;
    }
}

.block--all_persons_list {
    h2 {
        text-align: center;
    }
}

.block--all_persons_list__item {
    position: relative;

    a {
        color: inherit;
    }

    &:hover .block--all_persons_list__container {
        opacity: 1;
    }
}

.block--all_persons_list__container {
    padding: 1em;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    opacity: 0;
    transition: opacity $transition-duration - 0.1s;

    h3 {
        text-align: left;
        margin-bottom: 1.5rem;
    }
}

